Revert to 2016 index
Original commit had 2017 update to index file. Revert to 2016 index for
posterity

--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
             <div class="intro center-block">
                 <p>Babylon is the perfect venue for your special gathering. With our beautiful indoor / outdoor patio, we can host any kind of party. Whether you are celebrating a birthday or an engagement, a "sweet 16" or a bachelor party, Babylon will make it a memorable.</p>
             </div>
-            <button class="btn btn-primary" data-toggle="modal" data-target="#venue-modal">Book your event</button>
-            
+
+            <a class="btn btn-secondary text-center" class="scrollto" href="#contact">Contact us for more details</a>
         </div><!--//container-->
     </div><!--//venue-section-->
 
@@ -564,29 +564,6 @@
                     <h2 id="reserveModalLabel" class="modal-title text-center">
                         <span class="script">Reservations</span>
                         <span class="title-text">Book a Table</span>
-                        <span class="title-border"></span>
-                    </h2>
-                    <div class="intro text-center">
-                        <p class="blurb">Call us now to book a table</p>
-                        <p class="phone subtitle">(626) 395-7772</p>
-                        <hr>
-                        <!-- <p class="booking-intro">Or book online</p> -->
-                    </div>
-                </div><!--//modal-header-->
-                
-            </div><!--//modal-content-->
-        </div><!--//modal-dialog-->
-    </div><!--//modal-->
-
-    <!-- Venue Modal -->
-    <div id="venue-modal" class="modal modal-venue"  tabindex="-1" role="dialog" aria-labelledby="venueModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h2 id="reserveModalLabel" class="modal-title text-center">
-                        <span class="script">Venue</span>
-                        <span class="title-text">Book your event here</span>
                         <span class="title-border"></span>
                     </h2>
                     <div class="intro text-center">
